--- a/src/DisqusImport.csproj
+++ b/src/DisqusImport.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Html2Markdown" Version="3.2.1.341" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Nito.Guids" Version="1.0.0" />
   </ItemGroup>
